syntax = "proto3";

package stats.service.dashboard;

import "stats/messages/user_predictions_request.proto";
import "stats/messages/recommended_event.proto";
import "stats/messages/similar_events_request.proto";
import "stats/messages/interactions_count_request.proto";

option java_package = "ru.practicum.ewm.stats.proto";
option java_multiple_files = true;

service RecommendationsController {
    rpc GetRecommendationsForUser (stats.messages.UserPredictionsRequestProto)
            returns (stream stats.messages.RecommendedEventProto);

    rpc GetSimilarEvents (stats.messages.SimilarEventsRequestProto)
            returns (stream stats.messages.RecommendedEventProto);

    rpc GetInteractionsCount (stats.messages.InteractionsCountRequestProto)
            returns (stream stats.messages.RecommendedEventProto);
}